KB-12671 Fixed NPE on login page due to secretKey attribute